examples/pos/ptr.pcl
program pointer;

var x: integer;
var y: ^integer;

begin
  x := 4;
  y := @x;
  x := y^;
end.
