examples/neg/var1.pcl
program metabliti1;
var x : integer;
begin
  x := y + 1;
  y := y + 1;
end.
